--- a/composer.json
+++ b/composer.json
@@ -12,20 +12,20 @@
     }
   ],
   "require": {
-    "php": ">=7.0",
+    "php": ">=7.2",
     "elasticsearch/elasticsearch": "^7.2",
-    "ongr/elasticsearch-dsl": "^6.0",
-    "illuminate/container": "^6.0",
-    "illuminate/contracts": "^6.0",
-    "illuminate/console": "^6.0",
-    "illuminate/pagination": "^6.0",
-    "illuminate/support": "^6.0",
-    "illuminate/database": "^6.0"
+    "ongr/elasticsearch-dsl": "^7.2",
+    "illuminate/container": "^7.0",
+    "illuminate/contracts": "^7.0",
+    "illuminate/console": "^7.0",
+    "illuminate/pagination": "^7.0",
+    "illuminate/support": "^7.0",
+    "illuminate/database": "^7.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.0",
-    "mockery/mockery": "^0.9.4",
-    "phpunit/php-code-coverage": "^2.1"
+    "phpunit/phpunit": "^9.0",
+    "mockery/mockery": "^1.3",
+    "phpunit/php-code-coverage": "^8.0"
   },
   "autoload": {
     "psr-4": {
