--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,12 @@
     "php": ">=7.2",
     "elasticsearch/elasticsearch": "^7.2",
     "ongr/elasticsearch-dsl": "^7.2",
-    "illuminate/container": "^7.0",
-    "illuminate/contracts": "^7.0",
-    "illuminate/console": "^7.0",
-    "illuminate/pagination": "^7.0",
-    "illuminate/support": "^7.0",
-    "illuminate/database": "^7.0"
+    "illuminate/container": "^7.0|^8.0",
+    "illuminate/contracts": "^7.0|^8.0",
+    "illuminate/console": "^7.0|^8.0",
+    "illuminate/pagination": "^7.0|^8.0",
+    "illuminate/support": "^7.0|^8.0",
+    "illuminate/database": "^7.0|^8.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.0",
